--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node seed/seed.js",
     "start": "node index.js",
-    "dev":"node index.js"
+    "dev":"node --watch index.js"
   },
   "keywords": [],
   "author": "",
